--- a/demo.html
+++ b/demo.html
@@ -1,28 +1,320 @@
 <html>
 <head>
-	<link rel="stylesheet" href="assets/css/reveal.css">
-	<link rel="stylesheet" href="assets/css/theme/white.css">
+    <link rel="stylesheet" href="assets/css/reveal.css">
+    <link rel="stylesheet" href="assets/css/theme/white.css">
+    <link rel="stylesheet" href="assets/css/custom.css">
 </head>
 <body>
 <div class="reveal">
-	<div class="slides">
-		<section>
-			Slide 1
-			<br>
-			<img src="assets/images/Travis-CI-logo.jpg">
-		</section>
-		<section>Slide 2</section>
-		<section>Slide 2</section>
-		<section>Slide 2</section>
-		<section>Slide 2</section>
-		<section>Slide 2</section>
-		<section>Slide 2</section>
-		<section>Slide 2</section>
-		<section>Slide 2</section>
-		<section>Slide 2</section>
-		<section>Slide 2</section>
+    <div class="slides">
 
-	</div>
+        <section style="top: 98px; display: block;" class="present">
+            <h2 style="text-align: left;">
+                <img class="plain" src="assets/images/Travis-CI-logo.jpg">
+            </h2>
+            <br>
+            <h3 style="text-align: left;">
+                <b>
+                    <font color="#0af">Cloud-basierte Continuous Integration</font>
+                </b>
+            </h3>
+        </section>
+
+        <section style="top: 232px; display: block;" class="present"><p>
+        </p>
+            <p>
+                <br></p>
+            <h5 style="text-align: left">
+                <b>
+                    <span style="color: #0af; font-size: 70px">Continuous Integration</span>
+                    <br>
+                    ist ein Begriff aus der Software-Entwicklung, der den Prozess des fortlaufenden
+                    Zusammenfügens von Komponenten zu einer Anwendung beschreibt.
+                    <br>
+                    <p style="font-size: 30px; color: grey">Wikipedia.org</p>
+                </b>
+            </h5>
+
+        </section>
+
+        <section>
+            <img class="plain" src="assets/images/Automation-And-CI.png">
+        </section>
+
+        <section style="top: 98px; display: block;" class="present">
+            <h2 style="text-align: left;">
+                Travis CI
+            </h2>
+            <br>
+            <h5 style="text-align: left">
+                <b>
+                    <span style="color: #0af; font-size: 70px">Cloud basiert</span>
+                    <br>
+                    Keine eigene Infrastruktur notwendig
+                </b>
+            </h5>
+        </section>
+
+        <section style="top: 98px; display: block;" class="present">
+            <h2 style="text-align: left;">
+                Travis CI
+            </h2>
+            <br>
+            <h5 style="text-align: left">
+                <b>
+                    <span style="color: #0af; font-size: 70px">GitHub Integration</span>
+                    <br>
+                    Einfaches einbinden eigener GitHub Repos
+                </b>
+            </h5>
+        </section>
+
+        <section style="top: 98px; display: block;" class="present">
+            <h2 style="text-align: left;">
+                Travis CI
+            </h2>
+            <br>
+            <h5 style="text-align: left">
+                <b>
+                    <span style="color: #0af; font-size: 70px">Open Source</span>
+                    <br>
+                    Ständige Entwicklung und große Community
+                </b>
+            </h5>
+        </section>
+
+        <section style="top: 98px; display: block;" class="present">
+            <h2 style="text-align: left;">
+                Travis CI
+            </h2>
+            <br>
+            <h5 style="text-align: left">
+                <b>
+                    <span style="color: #0af; font-size: 70px">Kostenlos</span>
+                    <br>
+                    Für öffentliche Repos
+                </b>
+            </h5>
+        </section>
+
+        <section style="top: 162px; display: block;" class="present"><h2 style="text-align: left;">
+            <b>Sprachen</b>
+        </h2>
+            <div class="fragment visible" data-fragment-index="0">
+                <p style="text-align: left;">
+                    <b>TravisCI <font color="#0af"> unterstützt 30</font> Programmiersprachen
+                    </b>
+                </p>
+                <p>
+                    <br></p>
+
+            </div>
+            <h2 style="text-align: right;">
+                <b>Datenbanken</b>
+            </h2>
+            <p class="fragment visible" style="text-align: right;" data-fragment-index="1">
+                <b>Es stehen <font color="#0af">16 Datenbanken</font> zur Verfügung
+                </b>
+            </p></section>
+
+        <section style="top: 98px; display: block;" class="present">
+            <h2 style="text-align: left;">
+
+            </h2>
+            <br>
+            <h5 style="text-align: left">
+                <b>
+                    <span style="color: #0af; font-size: 70px">Getting started</span>
+                    <br>
+                    Einrichtung
+                </b>
+            </h5>
+        </section>
+
+        <section style="top: 98px; display: block;" class="present">
+            <h2 style="text-align: left;">
+
+            </h2>
+            <br>
+            <h5 style="text-align: left">
+                <b>
+                    <span style="color: #0af; font-size: 70px">Getting started</span>
+                    <br>
+                    Konfiguration
+                </b>
+            </h5>
+        </section>
+
+        <section style="top: 98px; display: block;" class="present">
+            <h2 style="text-align: left;">
+                .travis.yml
+            </h2>
+            <br>
+            <h5 style="text-align: left">
+                <b>
+                    <span style="color: #0af; font-size: 70px">Zentrale Konfiguration</span>
+                </b>
+            </h5>
+        </section>
+
+        <section style="top: 0px; display: block; font-size: 50px" class="present">
+            <div style="background-color: rgb(20, 98, 135); width: 100%; height: 400%; position: absolute; top: -100%; left: -45%; z-index: -1;">
+            </div>
+            <div>
+                <div style="width: 50%; display: inline-block; margin-right: 5%; vertical-align: top;">
+                    <p style="text-align: right; color: white">
+                        <b>Auswahl der Sprache</b>
+                    </p>
+                </div>
+                <div style="width: 40%; display: inline-block;">
+                    <p style="text-align: left; font-weight: bold;">
+                        <span style="color: #0af;">
+                            language:
+                            <span style="color: rgb(249, 145, 87);  font-size: 30px;">php</span>
+                        </span>
+                    </p>
+                </div>
+            </div>
+            <div class="fragment">
+                <div style="width: 50%; display: inline-block; margin-right: 5%; vertical-align: top;">
+                    <p style="text-align: right; color: white">
+                        <b>Auswahl der Version</b>
+                    </p>
+                </div>
+                <div style="width: 40%; display: inline-block;">
+                    <p style="text-align: left; font-weight: bold;">
+                        <span style="color: #0af;">
+                            php:
+                            <br>
+                            <span style="color: rgb(249, 145, 87);  font-size: 30px;">- '7.0'</span>
+                        </span>
+                    </p>
+                </div>
+            </div>
+            <div class="fragment">
+                <div style="width: 50%; display: inline-block; margin-right: 5%; vertical-align: top;">
+                    <p style="text-align: right; color: white">
+                        <b>Angabe der Services</b>
+                    </p>
+                </div>
+                <div style="width: 40%; display: inline-block;">
+                    <p style="text-align: left; font-weight: bold;">
+                        <span style="color: #0af;">
+                            services:
+                            <br>
+                            <span style="color: rgb(249, 145, 87);  font-size: 30px;">- postgresql</span>
+                        </span>
+                    </p>
+                </div>
+            </div>
+            <div class="fragment">
+                <div style="width: 50%; display: inline-block; margin-right: 5%; vertical-align: top;">
+                    <p style="text-align: right; color: white">
+                        <b>Skripte vor dem Ausführen</b>
+                    </p>
+                </div>
+                <div style="width: 40%; display: inline-block;">
+                    <p style="text-align: left; font-weight: bold;">
+                        <span style="color: #0af;">
+                            before_script:
+                            <br>
+                            <span style="color: rgb(249, 145, 87); font-size: 30px;">- composer self-update</span>
+                            <br>
+                            <span style="color: rgb(249, 145, 87); font-size: 30px;">- php artisan key:generate</span>
+                            <br>
+                            <span style="color: rgb(249, 145, 87); font-size: 30px;">- psql -c 'create database travis_ci_test;' -U postgres</span>
+                        </span>
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <section style="top: 0px; display: block; font-size: 50px" class="present">
+            <div style="background-color: rgb(20, 98, 135); width: 100%; height: 400%; position: absolute; top: -100%; left: -45%; z-index: -1;">
+            </div>
+            <div>
+                <div style="width: 50%; display: inline-block; margin-right: 5%; vertical-align: top;">
+                    <p style="text-align: right; color: white">
+                        <b>Ausführen der Tests</b>
+                    </p>
+                </div>
+                <div style="width: 40%; display: inline-block;">
+                    <p style="text-align: left; font-weight: bold;">
+                        <span style="color: #0af;">
+                            script:
+                            <br>
+                            <span style="color: rgb(249, 145, 87);  font-size: 30px;">- phpdbg -qrr vendor/bin/phpunit --coverage-clover=coverage.xml</span>
+                        </span>
+                    </p>
+                </div>
+            </div>
+            <div class="fragment">
+                <div style="width: 50%; display: inline-block; margin-right: 5%; vertical-align: top;">
+                    <p style="text-align: right; color: white">
+                        <b>Nach den Tests</b>
+                    </p>
+                </div>
+                <div style="width: 40%; display: inline-block;">
+                    <p style="text-align: left; font-weight: bold;">
+                        <span style="color: #0af;">
+                            after_script:
+                            <br>
+                            <span style="color: rgb(249, 145, 87);  font-size: 30px;">- php vendor/bin/coveralls -v</span>
+                        </span>
+                    </p>
+                </div>
+            </div>
+            <div class="fragment">
+                <div style="width: 50%; display: inline-block; margin-right: 5%; vertical-align: top;">
+                    <p style="text-align: right; color: white">
+                        <b>Festlegen der Branches</b>
+                    </p>
+                </div>
+                <div style="width: 40%; display: inline-block;">
+                    <p style="text-align: left; font-weight: bold;">
+                        <span style="color: #0af;">
+                            branches:
+                            <br>
+                            only:
+                            <br>
+                            <span style="color: rgb(249, 145, 87);  font-size: 30px;">- master</span><br>
+                            <span style="color: rgb(249, 145, 87);  font-size: 30px;">- development</span>
+                        </span>
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <section style="top: 98px; display: block;" class="present">
+            <h2 style="text-align: left;">
+                SimpleTodo
+            </h2>
+            <br>
+            <h5 style="text-align: left">
+                <b>
+                    <span style="color: #0af; font-size: 70px">Einrichtung, Konfiguration und Ausführen der Tests</span>
+                </b>
+            </h5>
+        </section>
+
+        <section style="top: 99px; display: block;" class="present"><h1>
+            <b style="text-align: left; color: #0af">Fragen?</b>
+        </h1>
+            <p>
+                <br></p>
+            <p>
+                <br></p>
+            <p>
+                <b>Präsentation und Beispiel Projekt unter
+                </b>
+            </p>
+            <h4>
+                <b>
+                    <a href="https://github.com/FatSquirrel93" target="_blank" class="roll"><span data-title="GitHub.com/FatSquirrel93">GitHub.com/FatSquirrel93</span></a>
+                </b>
+            </h4></section>
+
+    </div>
 </div>
 <script src="assets/js/reveal.js"></script>
 <script>
