--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <link rel="stylesheet" href="assets/css/reveal.css">
     <link rel="stylesheet" href="assets/css/theme/white.css">
     <link rel="stylesheet" href="assets/css/custom.css">
+
+    <meta charset="utf-8">
 </head>
 <body>
 <div class="reveal">
@@ -29,7 +31,7 @@
                     <span style="color: #0af; font-size: 70px">Continuous Integration</span>
                     <br>
                     ist ein Begriff aus der Software-Entwicklung, der den Prozess des fortlaufenden
-                    Zusammenfügens von Komponenten zu einer Anwendung beschreibt.
+                    ZusammenfÃ¼gens von Komponenten zu einer Anwendung beschreibt.
                     <br>
                     <p style="font-size: 30px; color: grey">Wikipedia.org</p>
                 </b>
@@ -78,7 +80,7 @@
                 <b>
                     <span style="color: #0af; font-size: 70px">Open Source</span>
                     <br>
-                    Ständige Entwicklung und große Community
+                    StÃ¤ndige Entwicklung und groÃŸe Community
                 </b>
             </h5>
         </section>
@@ -92,7 +94,7 @@
                 <b>
                     <span style="color: #0af; font-size: 70px">Kostenlos</span>
                     <br>
-                    Für öffentliche Repos
+                    FÃ¼r Ã¶ffentliche Repos
                 </b>
             </h5>
         </section>
@@ -102,7 +104,7 @@
         </h2>
             <div class="fragment visible" data-fragment-index="0">
                 <p style="text-align: left;">
-                    <b>TravisCI <font color="#0af"> unterstützt 30</font> Programmiersprachen
+                    <b>TravisCI <font color="#0af"> unterstÃ¼tzt 30</font> Programmiersprachen
                     </b>
                 </p>
                 <p>
@@ -113,7 +115,7 @@
                 <b>Datenbanken</b>
             </h2>
             <p class="fragment visible" style="text-align: right;" data-fragment-index="1">
-                <b>Es stehen <font color="#0af">16 Datenbanken</font> zur Verfügung
+                <b>Es stehen <font color="#0af">16 Datenbanken</font> zur VerfÃ¼gung
                 </b>
             </p></section>
 
@@ -153,6 +155,18 @@
             <h5 style="text-align: left">
                 <b>
                     <span style="color: #0af; font-size: 70px">Zentrale Konfiguration</span>
+                </b>
+            </h5>
+        </section>
+
+        <section style="top: 98px; display: block;" class="present">
+            <h2 style="text-align: left;">
+                Konfiguration online validieren
+            </h2>
+            <br>
+            <h5 style="text-align: left">
+                <b>
+                    <a href="http://lint.travis-ci.org/" target="_blank" class="roll"><span data-title="http://lint.travis-ci.org/">Travis WebLint</span></a>
                 </b>
             </h5>
         </section>
@@ -210,19 +224,18 @@
             <div class="fragment">
                 <div style="width: 50%; display: inline-block; margin-right: 5%; vertical-align: top;">
                     <p style="text-align: right; color: white">
-                        <b>Skripte vor dem Ausführen</b>
+                        <b>Festlegen der Branches</b>
                     </p>
                 </div>
                 <div style="width: 40%; display: inline-block;">
                     <p style="text-align: left; font-weight: bold;">
                         <span style="color: #0af;">
-                            before_script:
+                            branches:
                             <br>
-                            <span style="color: rgb(249, 145, 87); font-size: 30px;">- composer self-update</span>
+                            only:
                             <br>
-                            <span style="color: rgb(249, 145, 87); font-size: 30px;">- php artisan key:generate</span>
-                            <br>
-                            <span style="color: rgb(249, 145, 87); font-size: 30px;">- psql -c 'create database travis_ci_test;' -U postgres</span>
+                            <span style="color: rgb(249, 145, 87);  font-size: 30px;">- master</span><br>
+                            <span style="color: rgb(249, 145, 87);  font-size: 30px;">- development</span>
                         </span>
                     </p>
                 </div>
@@ -232,10 +245,26 @@
         <section style="top: 0px; display: block; font-size: 50px" class="present">
             <div style="background-color: rgb(20, 98, 135); width: 100%; height: 400%; position: absolute; top: -100%; left: -45%; z-index: -1;">
             </div>
-            <div>
+            <div style="width: 50%; display: inline-block; margin-right: 5%; vertical-align: top;">
+                <p style="text-align: right; color: white">
+                    <b>Skripte vor dem AusfÃ¼hren</b>
+                </p>
+            </div>
+            <div style="width: 40%; display: inline-block;">
+                <p style="text-align: left; font-weight: bold;">
+                        <span style="color: #0af;">
+                            before_script:
+                            <br>
+                            <span style="color: rgb(249, 145, 87); font-size: 30px;">- composer self-update</span>
+                            <br>
+                            <span style="color: rgb(249, 145, 87); font-size: 30px;">- psql -c 'create database travis_ci_test;' -U postgres</span>
+                        </span>
+                </p>
+            </div>
+            <div class="fragment">
                 <div style="width: 50%; display: inline-block; margin-right: 5%; vertical-align: top;">
                     <p style="text-align: right; color: white">
-                        <b>Ausführen der Tests</b>
+                        <b>AusfÃ¼hren der Tests</b>
                     </p>
                 </div>
                 <div style="width: 40%; display: inline-block;">
@@ -243,7 +272,7 @@
                         <span style="color: #0af;">
                             script:
                             <br>
-                            <span style="color: rgb(249, 145, 87);  font-size: 30px;">- phpdbg -qrr vendor/bin/phpunit --coverage-clover=coverage.xml</span>
+                            <span style="color: rgb(249, 145, 87);  font-size: 30px;">- phpdbg -qrr vendor/bin/phpunit</span>
                         </span>
                     </p>
                 </div>
@@ -264,35 +293,28 @@
                     </p>
                 </div>
             </div>
-            <div class="fragment">
-                <div style="width: 50%; display: inline-block; margin-right: 5%; vertical-align: top;">
-                    <p style="text-align: right; color: white">
-                        <b>Festlegen der Branches</b>
-                    </p>
-                </div>
-                <div style="width: 40%; display: inline-block;">
-                    <p style="text-align: left; font-weight: bold;">
-                        <span style="color: #0af;">
-                            branches:
-                            <br>
-                            only:
-                            <br>
-                            <span style="color: rgb(249, 145, 87);  font-size: 30px;">- master</span><br>
-                            <span style="color: rgb(249, 145, 87);  font-size: 30px;">- development</span>
-                        </span>
-                    </p>
-                </div>
-            </div>
         </section>
 
         <section style="top: 98px; display: block;" class="present">
             <h2 style="text-align: left;">
-                SimpleTodo
+                Beispielprojekt SimpleTodo
             </h2>
             <br>
             <h5 style="text-align: left">
                 <b>
-                    <span style="color: #0af; font-size: 70px">Einrichtung, Konfiguration und Ausführen der Tests</span>
+                    <span style="color: #0af; font-size: 70px">Einrichtung, Konfiguration und AusfÃ¼hren der Tests</span>
+                </b>
+            </h5>
+        </section>
+
+        <section style="top: 98px; display: block;" class="present">
+            <h2 style="text-align: left;">
+                Was ist noch mÃ¶glich?
+            </h2>
+            <br>
+            <h5 style="text-align: left">
+                <b>
+                    <span style="color: #0af; font-size: 70px">Automatisiertes Deployment, CRON Jobs, Code Coverage</span>
                 </b>
             </h5>
         </section>
@@ -305,7 +327,7 @@
             <p>
                 <br></p>
             <p>
-                <b>Präsentation und Beispiel Projekt unter
+                <b>PrÃ¤sentation und Beispiel Projekt unter
                 </b>
             </p>
             <h4>
