--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
             <br>
             <h5 style="text-align: left">
                 <b>
-                    <span style="color: #0af; font-size: 70px">GitHub Integration</span>
+                    <span style="color: #0af; font-size: 70px">GitHub-Integration</span>
                     <br>
-                    Einfaches einbinden eigener GitHub Repos
+                    Einfaches einbinden eigener GitHub-Repos
                 </b>
             </h5>
         </section>
@@ -94,7 +94,7 @@
                 <b>
                     <span style="color: #0af; font-size: 70px">Kostenlos</span>
                     <br>
-                    Für öffentliche Repos
+                    Für öffentliche Repositories
                 </b>
             </h5>
         </section>
@@ -327,7 +327,7 @@
             <p>
                 <br></p>
             <p>
-                <b>Präsentation und Beispiel Projekt unter
+                <b>Präsentation und Beispielprojekt unter
                 </b>
             </p>
             <h4>
