Added slide and removed unused heading

--- a/index.html
+++ b/index.html
@@ -45,9 +45,17 @@
 
         <section style="top: 98px; display: block;" class="present">
             <h2 style="text-align: left;">
-                Travis CI
+                <img class="plain" src="assets/images/Travis-CI-logo.jpg">
             </h2>
             <br>
+            <h3 style="text-align: left;">
+                <b>
+                    <font color="#0af">Features</font>
+                </b>
+            </h3>
+        </section>
+
+        <section style="top: 98px; display: block;" class="present">
             <h5 style="text-align: left">
                 <b>
                     <span style="color: #0af; font-size: 70px">Cloud basiert</span>
@@ -58,10 +66,6 @@
         </section>
 
         <section style="top: 98px; display: block;" class="present">
-            <h2 style="text-align: left;">
-                Travis CI
-            </h2>
-            <br>
             <h5 style="text-align: left">
                 <b>
                     <span style="color: #0af; font-size: 70px">GitHub-Integration</span>
@@ -72,10 +76,6 @@
         </section>
 
         <section style="top: 98px; display: block;" class="present">
-            <h2 style="text-align: left;">
-                Travis CI
-            </h2>
-            <br>
             <h5 style="text-align: left">
                 <b>
                     <span style="color: #0af; font-size: 70px">Open Source</span>
@@ -86,10 +86,6 @@
         </section>
 
         <section style="top: 98px; display: block;" class="present">
-            <h2 style="text-align: left;">
-                Travis CI
-            </h2>
-            <br>
             <h5 style="text-align: left">
                 <b>
                     <span style="color: #0af; font-size: 70px">Kostenlos</span>
@@ -115,13 +111,12 @@
                 <b>Datenbanken</b>
             </h2>
             <p class="fragment visible" style="text-align: right;" data-fragment-index="1">
-                <b>Es stehen <font color="#0af">16 Datenbanken</font> zur Verfügung
+                <b>Es werden <font color="#0af">16 Datenbanken</font> Unterstützt
                 </b>
             </p></section>
 
         <section style="top: 98px; display: block;" class="present">
             <h2 style="text-align: left;">
-
             </h2>
             <br>
             <h5 style="text-align: left">
@@ -172,7 +167,7 @@
         </section>
 
         <section style="top: 0px; display: block; font-size: 50px" class="present">
-            <div style="background-color: rgb(20, 98, 135); width: 100%; height: 400%; position: absolute; top: -100%; left: -45%; z-index: -1;">
+            <div style="background-color: #0af; width: 100%; height: 400%; position: absolute; top: -100%; left: -45%; z-index: -1;">
             </div>
             <div>
                 <div style="width: 50%; display: inline-block; margin-right: 5%; vertical-align: top;">
@@ -243,7 +238,7 @@
         </section>
 
         <section style="top: 0px; display: block; font-size: 50px" class="present">
-            <div style="background-color: rgb(20, 98, 135); width: 100%; height: 400%; position: absolute; top: -100%; left: -45%; z-index: -1;">
+            <div style="background-color: #0af; width: 100%; height: 400%; position: absolute; top: -100%; left: -45%; z-index: -1;">
             </div>
             <div style="width: 50%; display: inline-block; margin-right: 5%; vertical-align: top;">
                 <p style="text-align: right; color: white">
